--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -10,7 +10,7 @@
       <a href="javascript:void(0);">Stuff</a>
     </li>
     <li class="item">
-      <a href="javascript:void(0);">Otomedori.zip</a>
+      <a href="javascript:void(0);">One piece - chapter 4.zip</a>
     </li>            
   </ul>
   <ul class="sidebar-directory">
