--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -28,9 +28,11 @@ $sidebar-background: #fff;
 .favorites, .directory, .sidebar-settings {
   font-weight: bolder;
   background-color: #f5f5f5;
+  position:relative;
 }
 .sidebar-directory.list{
   flex-grow:1;
+
 }
 
 @mixin item-hover{
@@ -84,12 +86,7 @@ $sidebar-background: #fff;
 }
 .sidebar-settings  {
   li {
-    /*a {
-        i.fa {
-        color:$text-color;
-        margin-right:5px;
-      }
-    }*/
+    cursor:pointer;
     @include item-hover;
   }
 }
@@ -102,7 +99,19 @@ $sidebar-background: #fff;
     }
     
 }
-
+.open-directory {
+  cursor: pointer;
+  position:absolute;
+  top:3px;
+  right:5px;
+  &:hover {
+    &:before{
+      color: #fff !important;
+      background-color:$primary;
+    }
+    
+  }
+}
 .show-nav .sidebar {
   width: 300px;
   z-index: 51
