#15 Implement manga list

--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -2,7 +2,7 @@
   <ul class="sidebar-favorites">
     <li class="favorites">
       <div>
-        <i class="mr5 fa fa-star fa-lg"></i> Favorites
+        <i class="fa fa-star fa-lg"></i> Favorites
       </div>          
     </li>            
     <!-- <li class="divider"><hr></li> -->
@@ -17,11 +17,11 @@
     <li class="divider"><hr></li>
     <li class="directory ">
       <div>
-        <i class="mr5 fa fa-sitemap fa-lg"></i> Directory
-        <i class="fa fa-plus fa-pull-right fa-2x open-directory" data-bind="click:openDirectory, tooltip"
-        data-placement="left" title="Click to select a root folder"></i>    
+        <i class="fa fa-sitemap fa-lg"></i> Directory
+            
       </div>
-
+      <i class="fa fa-plus fa-2x open-directory" data-bind="click:openDirectory, tooltip"
+        data-placement="left" title="Click to select a root folder"></i>
     </li>
   </ul>
   <ul class="sidebar-directory list" data-bind="scroll,foreach: directories">
