--- a/src/scss/topbar.scss
+++ b/src/scss/topbar.scss
@@ -1,7 +1,7 @@
 .topbar {
   text-align: center;
-  background-color: $primary;
-  padding: 10px 10px;
+  background-color: $brand-primary;
+  padding: 7px 10px;
   color: #fff;
   font-size: 24px;
   display: flex;
