--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,14 +3,17 @@ $accent: #FF4081;
 $text-color: lighten(black, 30%);
 $border-color: #e5e5e5;
 $font-size: 14px;
-* {
+body {
+  font-family: 'Roboto', sans-serif;
+}
+/* {
   margin: 0px;
   padding: 0px;
-  font-family: 'Roboto', sans-serif;
+  
 }
 p {
   padding: 20px;
-}
+}*/
 html {
   min-height: 100%;
   height: 100%;
@@ -39,13 +42,4 @@ hr {
   backface-visibility: hidden;
   transition: .3s ease all;
   background-color: #fff;
-}
-
-.mr5 {
-  margin-right:5px;
-}
-.ellipsis {
-  white-space: nowrap;
-  text-overflow:ellipsis;
-  overflow: hidden;
 }
