--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -4,7 +4,7 @@ $sidebar-background: #fff;
   position: relative;
   background-color: #7986CB;
   overflow: hidden;
-  height: calc(100% - 49px);
+  height: calc(100% - 50px);
   width: 100%;
 }
 .canvas {
@@ -23,97 +23,43 @@ $sidebar-background: #fff;
   z-index: 10;
   display: flex;
   flex-direction: column;
-  ul{
-    padding:0px;
+  .collection {    
     margin:0px;
+    border-bottom:0px !important;
+    border-left:0px !important;
+    border-right:0px !important;
+    flex-shrink: 0;
+    .material-icons {
+      line-height:inherit;
+    }
   }
 }
 
-.favorites, .directory, .sidebar-settings {
-  font-weight: bolder;
-  background-color: #f5f5f5;
-  position:relative;
+.sidebar-favortites {
+  border-top:0px !important;
 }
 .sidebar-directory.list{
   flex-grow:1;
-
 }
 
-@mixin item-hover{
-  &:hover {
-    background-color: lighten($primary,20%);
-    color: #fff;
-    .fa {
-      color: #fff;
-    }
-  }
-}
 .sidebar-favorites, .sidebar-settings, .sidebar-directory {
-  list-style: none;
   width: 299px;
+}
 
-   li {
-    padding: 10px 5px;
-    color: $text-color;
-
-    a {
-      text-decoration: none;
-      color:$text-color;
-    }
-    &.divider {
-      padding: 0px 0px;      
-    }
-       
-    span, i {
-      &.fa {
-        color:lighten($accent, 0%);
-      }
-    }
-    &.item {
-      padding: 5px 10px;
-      cursor: pointer;
-      &.selected, &.selected:hover {
-        background-color: $primary;
-        color: #fff;
-        .fa {
-          color: #fff;
-        }
-      }
-      @include item-hover;
-      @include text-overflow();
-    }
-
-  }
-  ul {
-    list-style:none;
+.sidebar-settings, .sidebar-directory-header, .sidebar-favorites.with-header{
+  .collection-item {
+    padding: 10px 5px !important;
   }
 }
-.sidebar-settings  {
-  li {
-    cursor:pointer;
-    @include item-hover;
-  }
-}
-.sidebar-directory {
-    .fa{
-      &.fa-folder, 
-      &.fa-folder-open {
-        color: $text-color;
-      }  
+
+.sidebar-directory, .sidebar-favorites {
+  .collection-item {
+    transition: .25s;
+    cursor: pointer;
+    &:not(.active):hover {
+      background-color: #ddd;
     }
-    
-}
-.open-directory {
-  cursor: pointer;
-  position:absolute;
-  top:6px;
-  right:5px;
-  &:hover {
-    &:before{
-      color: #fff !important;
-      background-color:$primary;
-    }
-    
+    color: lighten(black, 20%);
   }
 }
 .show-nav .sidebar {
