Initial implementation for read/write saved settings

--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -1,6 +1,6 @@
 <div class="container manga-list">
 	<section class="row">
-		<h4 class="col s12">Manga list
+		<h4 class="">Manga list
 		<span data-bind="text:selectedDirectoryText"></span>
 		<!-- ko if: selectedDirectory -->
 		<a class="btn btn-flat right halfway-fab waves-effect waves-light"
@@ -12,7 +12,7 @@
 		
 	</section>
 	<div id="manga-list"  class="row"  data-bind="foreach:mangas">
-		<div class="col s12 m2">
+		<div class="col s12 m4 l2">
 			<div class="card">
 				<div class="card-image">
 					<img src="http://placehold.it/200x250">
