--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -3,7 +3,7 @@
 		<h4 class="">Manga list
 		<span data-bind="text:selectedDirectoryText"></span>
 		<!-- ko if: selectedDirectory -->
-		<a class="btn btn-flat right halfway-fab waves-effect waves-light"
+		<a class="btn btn-floating right waves-effect waves-light"
 		data-bind="click:toggleBookmark">
 			<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
 		</a>
