--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,7 +1,7 @@
 $brand-primary:   darken(#3f51b5, 6.5%) !default;
 $roboto-font-path: "~materialize-css/fonts/roboto/";
-// $primary-color: #3f51b5;
-// $secondary-color: #FF4081;
+$primary-color: #3f51b5;
+$secondary-color: #FF9100;
 $text-color: lighten(black, 30%);
 $border-color: #e5e5e5;
 $font-size: 14px;
