--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -1,7 +1,8 @@
 <div class="sidebar">
-    <div class="sidebar-favorites collection with-header">
-        <a href="#" class="collection-item">
-            <i class="material-icons left">bookmark</i>  Bookmarked Folders
+    <div class="sidebar-favorites collection with-header ">
+        <a href="#" class="collection-item grey lighten-4">
+            <i class="material-icons left">bookmark</i> 
+            <strong class="grey-text text-darken-3"> Bookmarked Folders</strong>
         </a>
     </div>
     <ul class="sidebar-favorites collection" data-bind="foreach:bookmarks">
@@ -12,8 +13,10 @@
         </li>
     </ul>
     <div class="sidebar-directory-header collection with-header">
-        <a href="#" class="collection-item" data-bind="click:openDirectory">
-            <i class="material-icons left">create_new_folder</i> Select directory
+        <a href="#" class="collection-item grey lighten-4" data-bind="click:openDirectory">
+            <i class="material-icons left">create_new_folder</i> 
+            <strong class="grey-text text-darken-3">Select directory</strong>
+            
         </a>
     </div>
     <ul class="sidebar-directory list collection" data-bind="scroll,foreach: directories">
@@ -29,9 +32,9 @@
     </ul>
     <div class="collection sidebar-settings">
         <!-- <li class="divider"><hr></li> -->
-        <a href="#" class="collection-item">
+        <a href="#" class="collection-item grey lighten-4">
             <i class="left material-icons">settings</i>
-            Settings
+            <strong class="grey-text text-darken-3">Settings</strong>
         </a>
     </div>
 </div>
