--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -1,17 +1,23 @@
 <div class="container manga-list">
 	<section class="row">
-		<h4 class="">Manga list
-		<span data-bind="text:selectedDirectoryText"></span>
-		<!-- ko if: selectedDirectory -->
-		<a class="btn btn-floating right waves-effect waves-light"
-		data-bind="click:toggleBookmark">
-			<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
-		</a>
-		<!-- /ko -->
+
+		<h4 class="col s12 m6 l8 truncate">Manga list
+			<span data-bind="text:selectedDirectoryText"></span>		
 		</h4>
-		
+		<div class="input-field col s12  m5 l3">
+          <input id="search_manga_input" type="text" data-bind="textInput:searchValue">
+          <label for="search_manga_input">Search Manga...</label>
+        </div>
+		<!-- ko if: selectedDirectory -->
+		<p class="col s12 m1 l1">
+			<a class="btn btn-floating right waves-effect waves-light"
+			data-bind="click:toggleBookmark">
+				<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
+			</a>	
+		</p>
+		<!-- /ko -->
 	</section>
-	<div id="manga-list"  class="row"  data-bind="foreach:mangas">
+	<div id="manga-list"  class="row"  data-bind="foreach:filteredManga">
 		<div class="col s12 m4 l2">
 			<div class="card">
 				<div class="card-image">
