--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
     <div class="sidebar-favorites collection with-header ">
-        <a href="#" class="collection-item grey lighten-4">
-            <i class="material-icons left">bookmark</i> 
+        <a href="#" class="collection-item">
+            <i class="material-icons left">bookmark</i>
             <strong class="grey-text text-darken-3"> Bookmarked Folders</strong>
         </a>
     </div>
@@ -14,9 +14,9 @@
     </ul>
     <div class="sidebar-directory-header collection with-header">
         <a href="#" class="collection-item grey lighten-4" data-bind="click:openDirectory">
-            <i class="material-icons left">create_new_folder</i> 
+            <i class="material-icons left">create_new_folder</i>
             <strong class="grey-text text-darken-3">Select directory</strong>
-            
+
         </a>
     </div>
     <ul class="sidebar-directory list collection" data-bind="scroll,foreach: directories">
