Refactor console.log to be more informative

--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -17,9 +17,10 @@
 				options:searchOptions,
 				optionsText: 'text',
 				optionsValue: 'value',
-				value: searchOption,
-				materialSelect:searchOption">
+				value: isRecursive,
+				materialSelect:isRecursive">
 			</select>
+			<label>Search and view options</label> 
 		</div>
 		<div class="input-field col s12  m2 l3">
 			<input id="search_manga_input" type="text" data-bind="textInput:searchValue">
