Implementation for TG-39 #in-progress and TG-40 #in-progress

--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -38,7 +38,7 @@
 				<div class="card-image">
 					<img src="http://placehold.it/200x250">
 					<!-- <span class="card-title">Title</span> -->
-					<a class="btn-floating halfway-fab waves-effect waves-light indigo"><i class="material-icons">bookmark_border</i></a>
+					<a class="btn-floating halfway-fab waves-effect waves-light indigo"><i class="material-icons">star_border</i></a>
 				</div>
 				<div class="card-content" data-bind="text:mangaTitle" >
 				</div>
