--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -1,4 +1,10 @@
 <div class="sidebar">
+    <div class="sidebar-favorites-manga collection with-header ">
+        <a href="#" class="collection-item">
+            <i class="material-icons left">star</i>
+            <strong class="grey-text text-darken-3"> Favorites</strong>
+        </a>
+    </div>
     <div class="sidebar-favorites collection with-header ">
         <a href="#" class="collection-item">
             <i class="material-icons left">bookmark</i>
