Implement TG-39 and TG-40 #in-progress

--- a/src/js/components/sidebar/sidebar.template.html
+++ b/src/js/components/sidebar/sidebar.template.html
@@ -1,12 +1,12 @@
 <div class="sidebar">
     <div class="sidebar-favorites-manga collection with-header ">
-        <a href="#" class="collection-item">
+        <a href="#" class="collection-item waves-effect waves-light" data-bind="click:showFavorites, active: isFavoritesActive">
             <i class="material-icons left">star</i>
             <strong class="grey-text text-darken-3"> Favorites</strong>
         </a>
     </div>
     <div class="sidebar-favorites collection with-header ">
-        <a href="#" class="collection-item">
+        <a href="#" class="collection-item waves-effect waves-light">
             <i class="material-icons left">bookmark</i>
             <strong class="grey-text text-darken-3"> Bookmarked Folders</strong>
         </a>
@@ -18,7 +18,7 @@
         </a>
     </div>
     <div class="sidebar-directory-header collection with-header">
-        <a href="#" class="collection-item grey lighten-4" data-bind="click:openDirectory">
+        <a href="#" class="collection-item waves-effect waves-light" data-bind="click:openDirectory">
             <i class="material-icons left">create_new_folder</i>
             <strong class="grey-text text-darken-3">Select directory</strong>
 
@@ -36,7 +36,7 @@
         </li>
     </ul>
     <div class="collection sidebar-settings">
-        <a href="#" class="collection-item grey lighten-4">
+        <a href="#" class="collection-item waves-effect waves-light">
             <i class="left material-icons">settings</i>
             <strong class="grey-text text-darken-3">Settings</strong>
         </a>
