--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -1,11 +1,8 @@
 <div class="container manga-list">
 	<section class="row">
 
-		<h4 class="col s12 m8 l6">
-		<a class="btn btn-floating left">
-			<i class="material-icons">star</i>
-		</a>
-		<span>Favorites</span>
+		<h4 class="col s12 m8 l9">
+			<span>Favorites</span>
 		</h4>
 
 		<div class="input-field col s12  m2 l3">
@@ -14,13 +11,16 @@
 		</div>
 
 	</section>
-	<div id="manga-list"  class="row"  data-bind="foreach:favorites">
+	<div id="manga-list"  class="row"  data-bind="foreach:filteredManga">
 		<div class="col s12 m4 l2">
 			<div class="card">
 				<div class="card-image">
 					<img src="http://placehold.it/200x250">
 					<!-- <span class="card-title">Title</span> -->
-					<a class="btn-floating halfway-fab waves-effect waves-light indigo"><i class="material-icons">star_border</i></a>
+					<a class="btn-floating halfway-fab waves-effect waves-light indigo"
+						data-bind="click:$parent.toggleFavorites">
+						<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
+					</a>
 				</div>
 				<div class="card-content" data-bind="text:mangaTitle" >
 				</div>
