--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -1,18 +1,18 @@
 <div class="container manga-list">
 	<section class="row">
 		<!-- ko if: selectedDirectory -->
-		<h4 class="col s12 m8 l6">
-		<a class="bookmark-btn btn btn-floating left waves-effect waves-light"
-			data-bind="click:toggleBookmark">
-			<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
-		</a>
-		<span data-bind="text:selectedDirectoryText"></span>
+		<h4 class="col s12 l6 truncate">
+			<a class="bookmark-btn btn btn-floating left waves-effect waves-light"
+				data-bind="click:toggleBookmark">
+				<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
+			</a>
+			<span data-bind="text:selectedDirectoryText"></span>
 		</h4>
 		<!-- /ko -->
 		<!-- ko ifnot: selectedDirectory -->
-		<h4 class="col s12 m8 l9">Manga list</h4>
+		<h4 class="col s12 l9">Manga list</h4>
 		<!-- /ko -->
-		<div class="input-field col s12 m3" >
+		<div class="input-field col s12 m6 l3" >
 			<select data-bind="
 				options:searchOptions,
 				optionsText: 'text',
@@ -22,24 +22,30 @@
 			</select>
 			<label>Search and view options</label> 
 		</div>
-		<div class="input-field col s12  m2 l3">
-			<input id="search_manga_input" type="text" data-bind="textInput:searchValue">
-			<label for="search_manga_input">Search Manga...</label>
+		<div class="input-field col s12  m6 l3">
+	          <input id="search" type="search" data-bind="value:searchValue" placeholder="Search Manga...">
+	          <label class="label-icon" for="search"><i class="material-icons">search</i> </label>
+	          <i class="material-icons" data-bind="click:clearSearch">close</i>
 		</div>
-		<!-- ko if:searching -->
-		<div class="progress col s12 m12 l12">
+
+		<div class="progress col s12 m12 l12" data-bind="visibility:searching">
 			<div class="indeterminate"></div>
 		</div>
-		<!-- /ko -->
 	</section>
-	<div id="manga-list"  class="row"  data-bind="foreach:mangas">
+
+	<div id="manga-list"  class="row"  data-bind="foreach:{data:mangas, afterRender: afterRender}">
 		<div class="col s12 m4 l2">
 			<div class="card">
-				<div class="card-image">
-					<img src="http://placehold.it/200x250">
+				<div class="card-image valign-wrapper">
+					<!-- ko if: $data.thumbnail -->
+						<img data-bind="attr:{src: $data.thumbnail}" height="288">
+					<!-- /ko -->
+					<!-- ko ifnot: $data.thumbnail -->
+						<img src="http://placehold.it/200x288" width="200" height="288">
+					<!-- /ko -->
 					<!-- <span class="card-title">Title</span> -->
 					<a class="btn-floating halfway-fab waves-effect waves-light indigo"
-						data-bind="click:$parent.toggleFavorites">
+						data-bind="click:$parent.toggleFavorites, clickBubble:false">
 						<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
 					</a>
 				</div>
