Fix for TG-43 #closed. - Added material icons in webpack bundle to load faster

--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -1,14 +1,14 @@
 <div class="container manga-list">
 	<section class="row">
 
-		<h4 class="col s12 m8 l9">
+		<h4 class="col s12 m6 l9">
 			<span>Favorites</span>
 		</h4>
 
 		<div class="input-field col s12  m6 l3">
 	          <input id="search" type="search" data-bind="value:searchValue" placeholder="Search Manga...">
 	          <label class="label-icon" for="search"><i class="material-icons">search</i> </label>
-	          <i class="material-icons" data-bind="click:clearSearch">close</i>
+	          <i class="material-icons clear-search" data-bind="click:clearSearch">close</i>
 		</div>
 
 	</section>
