--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -1,7 +1,7 @@
 <div class="container manga-list">
 	<section class="row">
 		<!-- ko if: selectedDirectory -->
-		<h4 class="col s12 l6 truncate">
+		<h4 class="col s12 l6 truncate selected-folder">
 			<a class="bookmark-btn btn btn-floating left waves-effect waves-light"
 				data-bind="click:toggleBookmark">
 				<i class="material-icons" data-bind="toggleBookmark:isBookmarked">bookmark_border</i>
