--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,4 +1,5 @@
 $roboto-font-path: "~materialize-css/fonts/roboto/";
+$material-design-icons-font-path: "~material-design-icons-iconfont/dist/fonts/";
 $primary-color: #3f51b5;
 $secondary-color: #ffab00;
 $text-color: lighten(black, 30%);
@@ -6,7 +7,10 @@ $border-color: #e5e5e5;
 $font-size: 14px;
 
 @import "~materialize-css/sass/materialize.scss";
+@import "~material-design-icons-iconfont/dist/material-design-icons.scss";
 @import "./common.scss";
 @import "./sidebar.scss";
 @import "./manga-list.scss";
 @import "./topbar.scss";
+
+.no-flick{-webkit-transform:translate3d(0,0,0);}
