--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -13,24 +13,45 @@
 
 	</section>
 	<div id="manga-list"  class="row"  data-bind="foreach:filteredManga">
-		<div class="col s12 m4 l2">
-			<div class="card">
-				<div class="card-image">
-					<!-- ko if:$data.thumbnail  -->
-					<img data-bind="attr:{src: $data.thumbnail }" width="200" height="288">
-					<!-- /ko -->
-					<!-- ko ifnot: $data.thumbnail  -->
-					<img src="http://placehold.it/200x288" width="200" height="288">
-					<!-- /ko -->
-					<!-- <span class="card-title">Title</span> -->
-					<a class="btn-floating halfway-fab waves-effect waves-light indigo"
-						data-bind="click:$parent.toggleFavorites">
-						<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
-					</a>
+		<div class="col s12 m4 l2 manga" data-bind="click:$parent.viewManga">
+
+			<div class="manga-content">
+
+				<div class="image-container">
+					<img class="manga-image" data-bind="src:thumbnail" >	
 				</div>
-				<div class="card-content" data-bind="text:mangaTitle" >
+
+				<div class="info">
+
+					<span class="title" data-bind="text:mangaTitle, tooltip:'bottom'"></span>	
+					<i class="material-icons action tooltipped" 
+						data-bind="isFavorite:isFavorite, 
+						click:$parent.toggleFavorites, 
+						clickBubble:false"">star</i>
 				</div>
+			</div>			
+		</div>		
+	</div>
+</div>
+
+<template>
+	<div class="col s12 m4 l2">
+		<div class="card">
+			<div class="card-image">
+				<!-- ko if:$data.thumbnail  -->
+				<img data-bind="attr:{src: $data.thumbnail }" width="200" height="288">
+				<!-- /ko -->
+				<!-- ko ifnot: $data.thumbnail  -->
+				<img src="http://placehold.it/200x288" width="200" height="288">
+				<!-- /ko -->
+				<!-- <span class="card-title">Title</span> -->
+				<a class="btn-floating halfway-fab waves-effect waves-light indigo"
+					data-bind="click:$parent.toggleFavorites">
+					<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
+				</a>
+			</div>
+			<div class="card-content" data-bind="text:mangaTitle" >
 			</div>
 		</div>
 	</div>
-</div>
+</template>
