--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,11 +1,4 @@
-$roboto-font-path: "~materialize-css/fonts/roboto/";
-$material-design-icons-font-path: "~material-design-icons-iconfont/dist/fonts/";
-$primary-color: #3f51b5;
-$secondary-color: #ffab00;
-$text-color: lighten(black, 30%);
-$border-color: #e5e5e5;
-$font-size: 14px;
-
+@import "_variables.scss";
 @import "~materialize-css/sass/materialize.scss";
 @import "~material-design-icons-iconfont/dist/material-design-icons.scss";
 @import "./common.scss";
