Implement TG-42 #done, TG-51 #done

--- a/src/js/components/view-manga/view-manga.template.html
+++ b/src/js/components/view-manga/view-manga.template.html
@@ -1,7 +1,5 @@
-<div class="view-manga " data-bind="with:selectedManga, css:viewOption">
-	<!-- <section class="pages" > -->
-		<!-- <div class="foreach:pages"> -->
-			<img class="manga-page" data-bind="attr:{src: thumbnail}, click:$component.switchClass" align="top">
-		<!-- </div> -->
-	<!-- </section> -->
+<div class="view-manga single-page" data-bind="css:viewOption">
+	<img class="manga-page" data-bind="src: $component.currentImage, 
+	click:$component.goNextPage, 
+	scrollTopOnClick:scrollTopOnClick" align="top">
 </div>
