--- a/src/js/components/favorites-list/favorites-list.template.html
+++ b/src/js/components/favorites-list/favorites-list.template.html
@@ -13,7 +13,7 @@
 
 	</section>
 	<div id="manga-list"  class="row"  data-bind="foreach:filteredManga">
-		<div class="col s12 m4 l2 manga" data-bind="click:$parent.viewManga">
+		<div class="col s12 m4 l3 xl2 manga" data-bind="click:$parent.viewManga">
 
 			<div class="manga-content">
 
@@ -34,24 +34,3 @@
 	</div>
 </div>
 
-<template>
-	<div class="col s12 m4 l2">
-		<div class="card">
-			<div class="card-image">
-				<!-- ko if:$data.thumbnail  -->
-				<img data-bind="attr:{src: $data.thumbnail }" width="200" height="288">
-				<!-- /ko -->
-				<!-- ko ifnot: $data.thumbnail  -->
-				<img src="http://placehold.it/200x288" width="200" height="288">
-				<!-- /ko -->
-				<!-- <span class="card-title">Title</span> -->
-				<a class="btn-floating halfway-fab waves-effect waves-light indigo"
-					data-bind="click:$parent.toggleFavorites">
-					<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
-				</a>
-			</div>
-			<div class="card-content" data-bind="text:mangaTitle" >
-			</div>
-		</div>
-	</div>
-</template>
