--- a/src/js/components/manga-list/manga-list.template.html
+++ b/src/js/components/manga-list/manga-list.template.html
@@ -34,10 +34,10 @@
 	</section>
 
 	<div id="mangalist" class="row" data-bind="foreach:{data:mangas, afterRender: afterRender}">
-		<div class="col s12 m4 l2 manga" data-bind="click:$parent.viewManga">
+		<div class="col s12 m4 l3 xl2 manga">
 			<div class="manga-content">
 				<div class="image-container">
-					<img class="manga-image" data-bind="src:thumbnail" >	
+					<img class="manga-image" data-bind="src:thumbnail, click:$parent.viewManga" >	
 				</div>
 				<div class="info">
 					<span class="title" data-bind="text:titleShort, tooltip:'bottom'"></span>	
@@ -51,27 +51,3 @@
 		</div>
 	</div>
 </div>
-
-<template>
-	<div id="manga-list"  class="row"  data-bind="foreach:{data:mangas, afterRender: afterRender}">
-		<div class="col s12 m4 l2">
-			<div class="card" data-bind="click:$parent.viewManga">
-				<div class="card-image valign-wrapper">
-					<!-- ko if: $data.thumbnail -->
-						<img data-bind="attr:{src: $data.thumbnail}" >
-					<!-- /ko -->
-					<!-- ko ifnot: $data.thumbnail -->
-						<img src="http://placehold.it/200x288" height="288">
-					<!-- /ko -->
-					<!--  -->
-					<a class="btn-floating halfway-fab waves-effect waves-light indigo "
-						data-bind="click:$parent.toggleFavorites, clickBubble:false">
-						<i class="material-icons" data-bind="isFavorite:isFavorite"></i>
-					</a>
-				</div>
-				<div class="card-content" data-bind="text:mangaTitle" >
-				</div>
-			</div>
-		</div>
-	</div>
-</template>
